--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.0.6",
+        "babel-preset-es2015": "^6.24.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
