--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "intervention/image": "^2.5",
+        "kryptonit3/counter": "5.2.*",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
